--- a/test_loader.ipynb
+++ b/test_loader.ipynb
@@ -1392,18 +1392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a, b = torch.max(torch.Tensor(1,2), 2)"
+    "a = torch.Tensor(3,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -1411,13 +1411,14 @@
     {
      "data": {
       "text/plain": [
-       "1e-13 *\n",
-       "  3.7731\n",
-       "[torch.FloatTensor of size 1x1]\n",
+       " 3.7731e-13  4.5701e-41  3.7731e-13  4.5701e-41\n",
+       " 0.0000e+00  0.0000e+00  0.0000e+00  0.0000e+00\n",
+       " 7.7135e+31  2.0558e+32  1.8755e+28  3.1093e-18\n",
+       "[torch.FloatTensor of size 3x4]\n",
        "\n"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1436,18 +1437,42 @@
     {
      "data": {
       "text/plain": [
-       " 1\n",
-       "[torch.LongTensor of size 1x1]\n",
+       "-1.0000e+00 -1.0000e+00 -1.0000e+00 -1.0000e+00\n",
+       "-1.0000e+00 -1.0000e+00 -1.0000e+00 -1.0000e+00\n",
+       " 7.7135e+31  2.0558e+32  1.8755e+28 -1.0000e+00\n",
+       "[torch.FloatTensor of size 3x4]\n",
        "\n"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "a - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.3561004877407e+31\t\n"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a:mean()"
    ]
   },
   {
